# Myrva

./: README.md  TODO.md
docs/: Problem Positioning.drawio
landing-page/: package-lock.json  package.json
landing-page/src/app/: layout.tsx  page.tsx
landing-page/src/components/: FeaturesSection.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Pricing.tsx
services/core-api/: .env.example  README.md  package-lock.json  package.json
services/core-api/src/: app.ts  server.ts
services/core-api/src/config/: env.ts
services/core-api/src/controllers/: sample.controller.ts
services/core-api/src/routes/: auth.route.ts  sample.route.ts
services/core-api/src/utils/: db.utils.ts
services/risk-assessment/: makefile  pyproject.toml
services/risk-assessment/src/: main.py
services/risk-assessment/src/infrastructure/postgres/: model.py
services/risk-assessment/src/services/: quote_service.py
